Dump cProfile results on slow requests.
... and use "snakeviz" to draw a flamegraph from it

Try to avoid "ValueError: Another profiling tool is already active"

https://github.com/python/cpython/issues/110770

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ pytest-xdist = "3.*"
 freezegun = "1.*"
 # Handy for monitoring parallel test runs (i.e., pytest-xdist) -- use htop to look for "pytest"
 setproctitle = "1.*"
+snakeviz = "^2.2.2"
 
 
 [tool.pydocstyle]
