--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -19,12 +19,12 @@ scrape_configs:
   static_configs:
   - targets:
     - django:9000
-- job_name: prometheus
+- job_name: postgres
   honor_timestamps: true
   scrape_interval: 15s
   scrape_timeout: 10s
   metrics_path: /metrics
   scheme: http
   static_configs:
-  - targets:
-    - localhost:9090
+    - targets:
+      - postgres-exporter:9187
