Use "multi" tooltips everywhere

--- a/grafana/reasonable-looking-dashboard.json
+++ b/grafana/reasonable-looking-dashboard.json
@@ -100,7 +100,7 @@
         ],
         "tooltip": {
           "hideZeros": false,
-          "mode": "single",
+          "mode": "multi",
           "sort": "none"
         }
       },
@@ -252,7 +252,7 @@
         ],
         "tooltip": {
           "hideZeros": false,
-          "mode": "single",
+          "mode": "multi",
           "sort": "none"
         }
       },
@@ -357,7 +357,7 @@
         ],
         "tooltip": {
           "hideZeros": false,
-          "mode": "single",
+          "mode": "multi",
           "sort": "none"
         }
       },
