Define my grafana dashboard inside the docker image

--- a/grafana/dashboards/reasonable-looking-dashboard.json
+++ b/grafana/dashboards/reasonable-looking-dashboard.json
@@ -528,7 +528,7 @@
   },
   "timepicker": {},
   "timezone": "utc",
-  "title": "New dashboard",
+  "title": "Reasonable-looking dashboard",
   "uid": "57a1138c-8bb6-40ed-9a49-4a08c200adac",
   "version": 2
 }
