Disable pyroscope on MacOS, since I suspect it of crashing python
The symptom is *occasional* crashes that print "python quit unexpectedly" and "pointer being freed was not allocated"

I can't prove pyroscope is at fault, but I notice that it includes a DLL (i.e., a file whose name ends with `.so`) whose name includes the string "-311" whereas
all the other DLLs have names that include "-313", and 3.13 is indeed my python version, *and*
[chatgpt](https://chatgpt.com/c/6861c0e1-63d8-8013-bbfb-a6e2f9c3739a) says

    🚨 Why this is bad
    The .cpython-311-*.so suffix indicates that the shared object was compiled against Python 3.11.

    You're running Python 3.13, which may have ABI differences from 3.11.

    Python extension modules are not guaranteed to be forward-compatible across major versions — especially across 3.11 → 3.13, where internal C API changes have occurred.

    Result: the 3.11-compiled extension is calling Python 3.13 internals incorrectly → leading to free(): pointer being freed was not allocated.

which sounds plausible.

Source seems to be [here](https://github.com/grafana/pyroscope-rs/tree/main/pyroscope_ffi/python) in case I feel like
building from source.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ humanize = "^4.11.0"
 django-tz-detect = "^0.5.0"
 django-tables2 = "2.*"
 django-prometheus = "*"
-pyroscope-io = "^0.8.11"
+pyroscope-io = { version = "^0.8.11", markers = "sys_platform != 'darwin'" }
+
 django-filter = "^25.1"
 
 [tool.djlint]
