--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ django-prometheus = "*"
 pyroscope-io = { version = "^0.8.11", markers = "sys_platform != 'darwin'" }
 
 django-filter = "^25.1"
+redis = "^6.2.0"
 
 [tool.djlint]
 use_gitignore=true
