--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -125,6 +125,7 @@ services:
       - pyroscope
     networks:
       - bridge_tournament_net
+      - prometheus
 
     ports:
       - "127.0.0.1:3000:3000"
