--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -90,7 +90,7 @@ services:
     # "--log_statement=all", "--log_min_duration_statement=0" are handy for exploring performance
     # https://www.postgresql.org/docs/17/config-setting.html#CONFIG-SETTING-SHELL
     # "--log_line_prefix" is like the default, but includes `%a` for the "application name" (into which some middleware smuggles the request ID)
-    command: ["postgres", "--max_connections=200", "--log_statement=all", "--log_line_prefix='%m [%p] req=%a '"]
+    command: ["postgres", "--max_connections=200", "--log_min_duration_statement=100", "--log_line_prefix='%m [%p] req=%a '"]
 
     volumes:
       - postgres_data:/var/lib/postgresql/data
