Ignore moar, Señor.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 /[0-9]*.sql
+/bot-2025*
+/cook
+/django-2025*
+/docs/*.html
+/how-tz-detect-works.html
 /project/.coverage
 /project/db.sqlite3
+/project/GIT_SYMBOLIC_REF
 /project/htmlcov/
 /project/prof/
 /project/static_root/*
-/project/GIT_SYMBOLIC_REF
 /project/VERSION
 /README.*.html
 __pycache__/
-/cook
-/docs/*.html
-/django-2025*
-/how-tz-detect-works.html
