Clear "labels" for the bot.
Otherwise, I fear that the bot will in effect tell caddy to proxy incoming https traffic to itself.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,6 +65,7 @@ services:
     <<: *django
     command: "poetry run python manage.py cheating_bot"
     ports: []
+    labels: {}
     depends_on:
       - django
 
