Rename a grafana panel

--- a/grafana/dashboards/reasonable-looking-dashboard.json
+++ b/grafana/dashboards/reasonable-looking-dashboard.json
@@ -275,7 +275,7 @@
           "useBackend": false
         }
       ],
-      "title": "Database Inserts",
+      "title": "Database Insert Rate (per second)",
       "type": "timeseries"
     },
     {
