--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -95,13 +95,22 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
 
-    # Experience shows we need at least one connection per player.  (It looks like we need one connection per SSE
-    # client)
-
-    # "--log_statement=all", "--log_min_duration_statement=0" are handy for exploring performance
     # https://www.postgresql.org/docs/17/config-setting.html#CONFIG-SETTING-SHELL
-    # "--log_line_prefix" is like the default, but includes `%a` for the "application name" (into which some middleware smuggles the request ID)
-    command: ["postgres", "--max_connections=200", "--log_min_duration_statement=100", "--log_line_prefix='%m [%p] req=%a '"]
+    command:
+      - "postgres"
+
+      # Experience shows we need at least one connection per player.  (It looks like we need one connection per SSE
+      # client)
+      - "--max_connections=200"
+
+      - "--log_min_duration_statement=100"
+
+      # like the default, but includes `%a` for the "application name" (into which some middleware smuggles the request
+      # ID)
+      - "--log_line_prefix='%m [%p] req=%a '"
+
+      # handy for exploring performance
+      # - "--log_statement=all"
 
     volumes:
       - postgres_data:/var/lib/postgresql/data
