--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "extensions.ignoreRecommendations": true,
-    "github.copilot.chat.enabled": false
+    "github.copilot.chat.enabled": false,
     "github.copilot.enable": false,
     "github.copilot.inlineSuggest.enable": false,
     "python.testing.pytestArgs": ["project"],
     "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false
+    "python.testing.unittestEnabled": false,
+    "python-envs.defaultEnvManager": "ms-python.python:poetry",
+    "python-envs.defaultPackageManager": "ms-python.python:poetry",
+    "python-envs.pythonProjects": []
 }
