--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,45 +2,74 @@
 name = "bridge_server"
 version = "0.1.0"
 description = "An online bridge game"
-readme = "README.md"
-authors = [{name = "Eric Hanchrow", email= "eric.hanchrow@gmail.com"}]
+authors = [{ name = "Eric Hanchrow", email = "eric.hanchrow@gmail.com" }]
 requires-python = ">=3.10,<4.0"
+readme = "README.md"
+dependencies = [
+    "django==5.*",
+    "django-debug-toolbar",
+    "django-extensions",
+    "faker>=26.0.0,<27",
+    "more-itertools>=10.3.0,<11",
+    "tqdm",
+    "bridge",
+    "django-eventstream",
+    "daphne",
+    "django-template-partials",
+    "whitenoise[brotli]>=6.7.0,<7",
+    "retrying>=1.3.4,<2",
+    "sseclient",
+    "requests==2.*",
+    "types-requests==2.*",
+    "platformdirs",
+    "sentry-sdk[django]>=2.29.1,<3",
+    "docutils",
+    "django-fastdev",
+    "psycopg[binary]",
+    "django-log-request-id>=2.1.0,<3",
+    "py-spy>=0.4.0,<0.5",
+    "types-tabulate>=0.9.0.20241207,<0.10",
+    "pyinstrument>=5.0.1,<6",
+    "humanize>=4.11.0,<5",
+    "django-tz-detect>=0.5.0,<0.6",
+    "django-tables2==2.*",
+    "django-prometheus",
+    "pyroscope-io>=0.8.11,<0.9 ; sys_platform != 'darwin'",
+    "django-filter~=25.1",
+    "redis>=6.2.0,<7",
+]
 
-[tool.poetry.dependencies]
-django = "5.*"
-django-debug-toolbar = "*"
-django-extensions = "*"
-faker = "^26.0.0"
-more-itertools = "^10.3.0"
-tqdm = "*"
+[dependency-groups]
+dev = [
+    "ipython==8.*",
+    "django-coverage-plugin==3.*",
+    "django-types==0.*",
+    "mypy==1.*",
+    "types-tqdm>=4.66.0.20240417,<5",
+    "python-lsp-server[autopep8, flake8, mccabe, pyflakes, pylint, rope, websockets, yapf]",
+    "logging-tree==1.*",
+    "ruff",
+    "ipdb>=0.13.13,<0.14",
+    "pytest-django==4.*",
+    "pytest-profiling==1.*",
+    "pylsp-mypy==0.*",
+    "python-lsp-black==2.*",
+    "pylsp-rope==0.*",
+    "python-lsp-ruff==2.*",
+    "pytest-xdist==3.*",
+    "freezegun==1.*",
+    "setproctitle==1.*",
+]
+
+[tool.uv]
+package = false
+
+[tool.uv.sources]
 bridge = { git = "https://gitlab.com/offby1/bridge.git", rev = "bb876c704ab98f09c76585cd3535c6d4def3df3e" }
-#bridge = {path = "../library", develop = true}
-django-eventstream = "*"
-daphne = "*"
-django-template-partials = "*"
-whitenoise = {extras = ["brotli"], version = "^6.7.0"}
-retrying = "^1.3.4"
-sseclient = "*"
-requests = "2.*"
-types-requests = "2.*"
-platformdirs = "*"
-sentry-sdk = {extras = ["django"], version = "^2.29.1"}
-docutils = "*"
-django-fastdev = "*"
-# beware of https://github.com/psycopg/psycopg/issues/888
-psycopg = {extras = ["binary"], version = "*"}
-django-log-request-id = "^2.1.0"
-py-spy = "^0.4.0"
-types-tabulate = "^0.9.0.20241207"
-pyinstrument = "^5.0.1"
-humanize = "^4.11.0"
-django-tz-detect = "^0.5.0"
-django-tables2 = "2.*"
-django-prometheus = "*"
-pyroscope-io = { version = "^0.8.11", markers = "sys_platform != 'darwin'" }
 
-django-filter = "^25.1"
-redis = "^6.2.0"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.djlint]
 use_gitignore=true
@@ -48,32 +77,6 @@ ignore="H016,H020,H021,H023,H030,H031"
 
 [tool.mypy]
 exclude = "/migrations/"
-
-[tool.poetry]
-requires-poetry = ">=2.0"
-package-mode = false
-
-[tool.poetry.group.dev.dependencies]
-ipython = "8.*"
-django-coverage-plugin = "3.*"
-django-types = "0.*"
-mypy = "1.*"
-types-tqdm = "^4.66.0.20240417"
-python-lsp-server = {extras = ["autopep8", "flake8", "mccabe", "pyflakes", "pylint", "rope", "websockets", "yapf"], version = "*"}
-logging-tree = "1.*"
-ruff = "*"
-ipdb = "^0.13.13"
-pytest-django = "4.*"
-pytest-profiling = "1.*"
-pylsp-mypy = "0.*"
-python-lsp-black = "2.*"
-pylsp-rope = "0.*"
-python-lsp-ruff = "2.*"
-pytest-xdist = "3.*"
-freezegun = "1.*"
-# Handy for monitoring parallel test runs (i.e., pytest-xdist) -- use htop to look for "pytest"
-setproctitle = "1.*"
-
 
 [tool.pydocstyle]
 # Disable pydocstyle entirely.
@@ -86,8 +89,6 @@ line-length = 100
 target-version = "py313"
 unsafe-fixes = true
 
-#https://docs.astral.sh/ruff/rules/print/
-#https://docs.astral.sh/ruff/rules/p-print/
 [tool.ruff.lint]
 ignore = ["T201", "T203"]
 
@@ -96,10 +97,6 @@ dynamic_context = "test_function"
 plugins = [
     'django_coverage_plugin',
 ]
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE="project.dev_settings"
