Use "django-watchfiles" and "django-browser-reload"
inspired by https://adamj.eu/tech/2025/09/22/introducing-django-watchfiles/

So slick!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
     "pyroscope-io>=0.8.11,<0.9 ; sys_platform != 'darwin'",
     "django-filter~=25.1",
     "redis>=6.2.0,<7",
+    "django-browser-reload>=1.21.0",
+    "django-watchfiles>=1.4.0",
 ]
 
 [dependency-groups]
