uv add --dev basedpyright
as recommended by

https://docs.basedpyright.com/latest/installation/command-line-and-language-server/

I hope this will let me use M-. to navigate to 3rd-party stuff.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,11 @@ dev = [
     "pytest-xdist==3.*",
     "freezegun==1.*",
     "setproctitle==1.*",
+    "basedpyright>=1.31.6",
 ]
+
+[tool.basedpyright]
+include = ["project"]
 
 [tool.uv]
 package = false
