Try out django-http-compression
... following https://adamj.eu/tech/2025/10/10/introducing-django-http-compression/

In the response headers from http://localhost:9000/player/1/, I see:

Without compression:

    Content-Length: 22482

With compression:

    Content-Encoding: br
    Content-Length: 5251

Looks good to me!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "redis>=6.2.0,<7",
     "django-browser-reload>=1.21.0",
     "django-watchfiles>=1.4.0",
+    "django-http-compression>=1.0.0",
 ]
 
 [dependency-groups]
